--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Resistance Card Game",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "node tests/*.js | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/Neil-G/the_resistance/issues"
   },
-  "homepage": "https://github.com/Neil-G/the_resistance#readme"
+  "homepage": "https://github.com/Neil-G/the_resistance#readme",
+  "devDependencies": {
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.3"
+  }
 }
